# Openholo

./: .gitignore  CMakeLists.txt  Openholo.sln  README.md  file_copy.bat  openholo_vs2022_cuda11.6.sln  setup.sh
..OpenholoRefApp/Reference/include/: ophSig.h
Colab/: Openholo.ipynb  OpenholoGeneration.cpp  OpenholoGeneration.py  install.sh
Colab/Config/: Generation_LightField (RGB).xml  Generation_PointCloud (RGB).xml  Generation_TriMesh (RGB).xml
Colab/fftw-3.3.10/lib/: libfftw3.so.3.6.9  libfftw3_threads.so.3.6.9
Example/: ophExam.sln
Example/examDepthMap/: examDepthMap.cpp  examDepthMap.vcxproj  examDepthMap.vcxproj.filters
Example/examLightField/: examLightField.cpp  examLightField.vcxproj  examLightField.vcxproj.filters
Example/examPointCloud/: examPointCloud.cpp  examPointCloud.vcxproj  examPointCloud.vcxproj.filters
Example/examTiangleMesh/: examTiangleMesh.vcxproj  examTiangleMesh.vcxproj.filters  examTriangleMesh.cpp
Example/examWRP/: examWRP.cpp  examWRP.vcxproj  examWRP.vcxproj.filters
Openholo/: CMakeLists.txt  Openholo.vcxproj  Openholo.vcxproj.filters  Resource.rc  openholo.vcxproj.filters  openholo_vs2022.vcxproj  openholo_vs2022.vcxproj.filters
Openholo/Reference/include/: AngularC_types.h  Openholo.h  comment.h  define.h  enumerator.h  epsilon.h  function.h  include.h  ivec.h  sys.h  vec.h
Openholo/lib/: libfftw3-3.lib
Openholo/src/: AngularC_data.cpp  AngularC_data.h  AngularC_types.h  Base.h  FFTImplementationCallback.cpp  ImgCodecDefine.h  ImgCodecOhc.cpp  ImgCodecOhc.h  ImgControl.cpp  ImgControl.h  Openholo.cpp  Openholo.h  PLYparser.cpp  PLYparser.h  coder_array.h  comment.h  complex.h  define.h  epsilon.cpp  epsilon.h  function.h  include.h  ivec.h  mat.h  ophKernel.cu  ophKernel.cuh  real.h  rtGetInf.cpp  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  struct.h  sys.cpp  sys.h  typedef.h  vec.cpp  vec.h
Openholo_python/: README.md  requirements.txt  setup.py
Openholo_python/ophpy/: Depthmap.py  Image2D.py  PointCloud.py  PointCloud_multicore.py  __init__.py
Openholo_python/test/: PointCloud_Dice_RGB.ply  test.py  tests.py
Openholo_python/test/TestFunction/: asm_reconstruction.m
OphCoreProcessing/: OphCoreProcessing.vcxproj  OphCoreProcessing.vcxproj.filters
OphCoreProcessing/src/: OphCoreProcessing.cpp  OphCoreProcessing.h
OphGeneration/: OphGeneration.vcxproj  OphGeneration.vcxproj.filters
OphGeneration/src/: OphDepthMap.cpp  OphDepthMap.h  OphDepthMap_CPU.cpp  OphDepthMap_GPU.cpp  OphGeneration.cpp  OphGeneration.h  OphPCKernel.cu  OphPointCloud.cpp
OphReconstruction/: OphReconstruction.vcxproj  OphReconstruction.vcxproj.filters
OphReconstruction/src/: OphReconstruction.cpp  OphReconstruction.h
OphSigDEMO/OphSigDEMO/: OpenSigDEMO.rc  OphSigDEMO.vcxproj  OphSigDEMODlg.h  TabCAC.cpp  TestSpecHoloParam.xml
OphSigDEMO/OphSigDEMO/config/: TestSpecLF.xml  TestSpecWRP.xml
Reference/include/: Base.h  Bitmap.h  CUDA.h  FBXParser.h  FFTImplementationCallback.h  HologramGenerator.h  ImgCodecDefine.h  ImgCodecOhc.h  ImgEncoder.h  OpenCL.h  Openholo.h  OphGeneration.h  OphPointCloud.h  OphReconstruction.h  PLYparser.h  StringConverter.h  coder_array.h  comment.h  complex.h  complex_bak.h  cwo_lib.h  define.h  encoding.h  enumerator.h  epsilon.h  function.h  include.h  ivec.h  mat.h  ophACPAS.h  ophAS.h  ophAS_GPU.h  ophCascadedPropagation.h  ophDepthMap.h  ophDepthMap_GPU.h  ophDis.h  ophGen.h  ophIFTA.h  ophKernel.cuh  ophLUT.h  (+28 more)
Reference/lib/: cufft.lib  cwo.lib  npps.lib  openholo.lib  openholo_d.lib  ophgen.lib  ophgen_d.lib  ophrec.lib  ophrec_d.lib  ophsig.lib  ophsig_d.lib
Test/: execute copy.sh  execute.sh  test.cpp
Test/Config/: Generation_DepthMap (RGB).xml  Generation_WRP (RGB).xml  Reconstruction (RGB).xml
Test/Mesh/: dice.ply  mesh_rabbit.ply  mesh_triangles.ply
Test/PointCloud & WRP/: bee.ply  pointcloud_1470.ply  pointcloud_3748.ply
openholo/: openholo.vcxproj  openholo.vcxproj.filters
openholo/lib/: libfftw3f-3.lib
openholo/src/: ImgControl.cpp  ImgControl.h  ImgEncoder.cpp  ImgEncoder.h  StringConverter.cpp  ophKernel.cuh
ophdis/: TestSpecCascadedPropagation.xml  ophdis.vcxproj  ophdis.vcxproj.filters
ophdis/src/: ophCascadedPropagation.cpp  ophCascadedPropagation.h  ophDis.cpp  ophDis.h  ophWaveAberration.cpp  ophWaveAberration.h
ophgen/: CMakeLists.txt  Resource.rc  ophLightField.cpp  ophLightField.h  ophgen.vcxproj  ophgen.vcxproj.filters  ophgen_vs2022.vcxproj  ophgen_vs2022.vcxproj.filters  resource.h
ophgen/src/: CUDA.cpp  CUDA.h  OpenCL.cpp  OpenCL.h  cudaWrapper.cpp  cudaWrapper.h  encoding.h  ophACPAS.cpp  ophACPAS.h  ophAS.cpp  ophAS.h  ophASKernel.cu  ophAS_GPU.cpp  ophDMKernel.cu  ophDepthMap.cpp  ophDepthMap.h  ophDepthMap_CPU.cpp  ophDepthMap_GPU.cpp  ophDepthMap_GPU.h  ophGen.cpp  ophGen.h  ophIFTA.cpp  ophIFTA.h  ophLFKernel.cu  ophLUT.cpp  ophLightField.cpp  ophLightField.h  ophLightField_GPU.cpp  ophLightField_GPU.h  ophNonHogelLF.cpp  ophNonHogelLF.h  ophPAS.cpp  ophPAS.h  ophPASKernel.cu  ophPAS_GPU.cpp  ophPCKernel.cl  ophPCKernel.cu  ophPointCloud.cpp  ophPointCloud.h  ophPointCloud_GPU.cpp  (+14 more)
ophrec/: CMakeLists.txt  Resource.rc  ophrec.vcxproj  ophrec.vcxproj.filters  ophrec_vs2022.vcxproj  ophrec_vs2022.vcxproj.filters  resource.h
ophrec/src/: ophCascadedPropagation.cpp  ophCascadedPropagation.h  ophRec.cpp  ophRec.h  ophRecKernel.cu  ophRec_GPU.cpp  ophRec_GPU.h  ophWaveAberration.cpp  ophWaveAberration.h
ophsig/: CMakeLists.txt  Resource.rc  ophsig.vcxproj  ophsig.vcxproj.filters  ophsig_vs2022.vcxproj  ophsig_vs2022.vcxproj.filters
ophsig/OphSigDEMO/: OphSigDEMO.sln
ophsig/OphSigDEMO/OphSigDEMO/: OphSigDEMO.cpp  OphSigDEMO.h  OphSigDEMO.rc  OphSigDEMO.vcxproj  OphSigDEMO.vcxproj.filters  OphSigDEMODlg.cpp  TabAT.cpp  TabAT.h  TabCAC.h  TabHPO.cpp  TabHPO.h  TabOFFA.cpp  TabOFFA.h  TabSF.cpp  TabSF.h  framework.h  (+4 more)
ophsig/src/: cwo.cpp  ophSig.cpp  ophSig.h  ophSigCH.cpp  ophSigCH.h  ophSigConvert.cpp  ophSigConvert.h  ophSigGetParam.cpp  ophSigKernel.cu  ophSigPS.cpp  ophSigPS.h  ophSigPU.cpp  ophSigPU.h  ophSig_GPU.cpp  ophSig_GPU.h  tinyxml2.cpp
(+34 files in other folders)
